cmake_minimum_required(VERSION 3.4)
project(hello_world)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQURED ON)
add_library(hello STATIC /home/enenra/lab03/lab03/formatter_ex_lib/formatter_ex.cpp /home/enenra/lab03/lab03/formatter_lib/formatter.cpp)
include_directories (/home/enenra/lab03/lab03/formatter_ex_lib /home/enenra/lab03/lab03/formatter_lib)
add_executable(Hello /home/enenra/lab03/lab03/hello_world_application/hello_world.cpp)
target_link_libraries(Hello hello)
