cmake_minimum_required(VERSION 3.4)
project(Solver)
set(CMAKE_CXX_STANDART 11)
set(CMAKE_CXX_STANDART_REQUIRED ON)
add_library(solver STATIC /home/enenra/lab03/lab03/solver_lib/solver.cpp /home/enenra/lab03/lab03/formatter_ex_lib/formatter_ex.cpp /home/enenra/lab03/lab03/formatter_lib/formatter.cpp)
include_directories(/home/enenra/lab03/lab03/solver_lib /home/enenra/lab03/lab03/formatter_ex_lib /home/enenra/lab03/lab03/formatter_lib)
add_executable(Solver /home/enenra/lab03/lab03/solver_application/equation.cpp)
target_link_libraries(Solver solver)
